--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>Baresto</title>
 </head>
 <body>
-    <div class="head">
-        <div class="background-image">
+    <div class="background-image">
+        <div class="nav-main" style="display: flex;">
             <nav class="navbar">
-                <ul class="left-nav">
-                    <li class="current">
+                <ul class="nav-menu" style="display: flex;">
+                    <li>
                         <a href="#" class="nav-link">HOME</a>
                     </li>
                     <li>
@@ -26,8 +27,10 @@
                         <a href="#" class="nav-link">BOOKING</a>
                     </li>
                 </ul>
-                <img class="logo" src="assets/logo.png">
-                <ul class="right-nav">
+            </nav>
+            <img src="assets/logo.png" class="logo" style="width: 9%;">
+            <nav class="navbar">
+                <ul class="nav-menu" style="display: flex;">
                     <li>
                         <a href="#" class="nav-link">ABOUT</a>
                     </li>
@@ -38,20 +41,18 @@
                         <a href="#" class="nav-link">CONTACT</a>
                     </li>
                 </ul>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
+            </nav>
+            <nav class="hamburger">
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fa-solid fa-bars"></i>
+                </label>
             </nav>
         </div>
-        <div class="content">
-            <h1>Welcome to Baresto</h1>
-            <p>Your favorite place for coffee and more.</p>
-        </div>
     </div>
-
-
+    <div class="content">
+        <h1>Sample Website</h1>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
