--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </li>
                 </ul>
             </nav>
-            <img src="assets/logo.png" class="logo" style="width: 9%;">
+            <img src="assets/logo.png" class="logo">
             <nav class="navbar">
                 <ul class="nav-menu" style="display: flex;">
                     <li>
