--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Oswald:wght@200..700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <script src="script.js" defer></script>
     <title>Baresto</title>
 </head>
 <body>
@@ -42,17 +52,41 @@
                     </li>
                 </ul>
             </nav>
-            <nav class="hamburger">
-                <input type="checkbox" id="check">
-                <label for="check" class="checkbtn">
-                    <i class="fa-solid fa-bars"></i>
-                </label>
-            </nav>
+            <div class="hamburger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </div>
+        <div class="slider--content">
+            <div class="headings">
+                <h1 class="main--heading">
+                    The Perfect
+                </h1>
+                <h2 class="sub--heading">
+                    BLEND
+                </h2>
+            </div>
+            <p class="shop--description">
+                Crafted with care and precision, this blend represents the pinnacle of coffee craftsmenship, where artistry meets expertise to create a symphony of flavor.
+            </p>
+            <button class="menu--btn">
+                VIEW MENU
+            </button>
+        </div>
+    </div>
+    <div class="origin--grid">
+        <div class="origin-grid--item1">
+            <div class="origin--headings">
+                <div class="origin-main--heading"></div>
+                <div class="origin-sub--heading"></div>
+            </div>
+            <div class="origin--story"></div>
+        </div>
+        <div class="origin-grid--item2"></div>
     </div>
     <div class="content">
         <h1>Sample Website</h1>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
