--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
     <div class="origin--grid">
         <div class="origin-grid--item1">
             <div class="origin--headings">
-                <div class="origin-main--heading"></div>
-                <div class="origin-sub--heading"></div>
+                <h1 class="origin-main--heading">Discover</h1>
+                <h2 class="origin-sub--heading">Our Story</h2>
             </div>
-            <div class="origin--story"></div>
+            <p class="origin--story">
+                In the heart of the bustling metropolis, where the rhythm of life pulses relentlessly, there exists a sanctuary hidden among the chaos—a place where time slows, and worries fade into the aroma of freshly ground coffee beans.
+            </p>
         </div>
         <div class="origin-grid--item2"></div>
     </div>
