--- a/index.html
+++ b/index.html
@@ -87,6 +87,108 @@
         </div>
         <div class="origin-grid--item2"></div>
     </div>
+    <div class="offers">
+        <div class="offer-row--1">
+            <div class="offer-1">
+                <img src="assets/icon-1.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Aromatic Taste</h2>
+                    <p class="offer--about">
+                        Rich, inviting, and utterly tantalizing, the aromatic taste of coffee is a sensory journey that begins with the first whiff.
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+            <div class="offer-2">
+                <img src="assets/icon-1.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Delicious Foods</h2>
+                    <p class="offer--about">
+                        From the first tantalizing aroma to the last lingering taste, our menu is a celebration of diverse cuisines and bold creativity.
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+            <div class="offer-3">
+                <img src="assets/icon-1.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Custom<br>Coffee Builder</h2>
+                    <p class="offer--about">
+                        Transforming our cozy café into the ultimate party destination, where friends gather, laughter flows, and memories are made.
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+            <div class="offer-4">
+                <img src="assets/icon-1.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Mood Based<br>Coffee Suggestions</h2>
+                    <p class="offer--about">
+                        Personalized coffee suggestions tailored to match your mood—experience the perfect brew for every feeling!
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+        </div>
+        <div class="offer-row--2">
+            <div class="offer-5">
+                <img src="assets/icon-2.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Books</h2>
+                    <p class="offer--about">
+                        Cozy up with a cup of coffee and explore our curated collection of books for the perfect reading escape!
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+            <div class="offer-6">
+                <img src="assets/icon-2.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Coffee Art<br>Gallery</h2>
+                    <p class="offer--about">
+                        Immerse yourself in the artistry of coffee with our stunning coffee art gallery, where creativity meets flavor
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+            <div class="offer-7">
+                <img src="assets/icon-2.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Taste Before<br>You Eat</h2>
+                    <p class="offer--about">
+                        Experience flavors first—sample our delights before indulging fully.
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+            <div class="offer-8">
+                <img src="assets/icon-2.png" alt="" class="offer-img">
+                <div class="offer--description">
+                    <h2 class="offer--name" style="text-align: center;">Make Your Party</h2>
+                    <p class="offer--about">
+                        Host unforgettable celebrations with our customized party arrangements.
+                    </p>
+                </div>
+                <button class="more-offer--btn">
+                    View More
+                </button>
+            </div>
+        </div>
+    </div>
     <div class="content">
         <h1>Sample Website</h1>
     </div>
