--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="origin-grid--item1">
             <div class="origin--headings">
                 <h1 class="origin-main--heading">Discover</h1>
-                <h2 class="origin-sub--heading">Our Story</h2>
+                <h2 class="origin-sub--heading">OUR STORY</h2>
             </div>
             <p class="origin--story">
                 In the heart of the bustling metropolis, where the rhythm of life pulses relentlessly, there exists a sanctuary hidden among the chaos—a place where time slows, and worries fade into the aroma of freshly ground coffee beans.
@@ -87,107 +87,142 @@
         </div>
         <div class="origin-grid--item2"></div>
     </div>
+    <div class="offer-headings">
+        <h1 class="offer-main--heading">What We Offer</h1>
+    </div>
     <div class="offers">
-        <div class="offer-row--1">
-            <div class="offer-1">
-                <img src="assets/icon-1.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Aromatic Taste</h2>
-                    <p class="offer--about">
-                        Rich, inviting, and utterly tantalizing, the aromatic taste of coffee is a sensory journey that begins with the first whiff.
-                    </p>
+        <div class="offer--grid-1">
+            <div class="offer-grid--item1" style="background-image: url(assets/offerings-1.jpg); background-position: unset; background-repeat: no-repeat; background-size: cover; height: 400px;"></div>
+            <div class="offer-grid--item2">
+                <div class="offer--headings">
+                    <h1 class="offer-main--heading">Aromatic</h1>
+                    <h2 class="offer-sub--heading">TASTE</h2>
                 </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
-            </div>
-            <div class="offer-2">
-                <img src="assets/icon-1.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Delicious Foods</h2>
-                    <p class="offer--about">
-                        From the first tantalizing aroma to the last lingering taste, our menu is a celebration of diverse cuisines and bold creativity.
-                    </p>
-                </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
-            </div>
-            <div class="offer-3">
-                <img src="assets/icon-1.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Custom<br>Coffee Builder</h2>
-                    <p class="offer--about">
-                        Transforming our cozy café into the ultimate party destination, where friends gather, laughter flows, and memories are made.
-                    </p>
-                </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
-            </div>
-            <div class="offer-4">
-                <img src="assets/icon-1.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Mood Based<br>Coffee Suggestions</h2>
-                    <p class="offer--about">
-                        Personalized coffee suggestions tailored to match your mood—experience the perfect brew for every feeling!
-                    </p>
-                </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
+                <p class="offer--detail" 
+                style="color: white;
+                font-family: 'plus jakarta sans', sans-serif;
+                width: 75%;
+                font-size: clamp(7px, calc(4px + 0.7vw), 50px);
+                margin-bottom: 30px;
+                line-height: clamp(15px, 2vw, 50px);
+                font-weight: 300;
+                letter-spacing: 1.5px;">
+                    In the heart of the bustling metropolis, where the rhythm of life pulses relentlessly, there exists a sanctuary hidden among the chaos—a place where time slows, and worries fade into the aroma of freshly ground coffee beans.
+                </p>
             </div>
         </div>
-        <div class="offer-row--2">
-            <div class="offer-5">
-                <img src="assets/icon-2.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Books</h2>
-                    <p class="offer--about">
-                        Cozy up with a cup of coffee and explore our curated collection of books for the perfect reading escape!
-                    </p>
+        <div class="offer--grid-2">  
+            <div class="offer-grid--item3">
+                <div class="offer--headings">
+                    <h1 class="offer-main--heading">Delicious</h1>
+                    <h2 class="offer-sub--heading">FOODS</h2>
                 </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
+                <p class="offer--detail"
+                style="color: white;
+                font-family: 'plus jakarta sans', sans-serif;
+                width: 75%;
+                font-size: clamp(7px, calc(4px + 0.7vw), 50px);
+                margin-bottom: 30px;
+                line-height: clamp(15px, 2vw, 50px);
+                font-weight: 300;
+                letter-spacing: 1.5px;">
+                    In the heart of the bustling metropolis, where the rhythm of life pulses relentlessly, there exists a sanctuary hidden among the chaos—a place where time slows, and worries fade into the aroma of freshly ground coffee beans.
+                </p>
             </div>
-            <div class="offer-6">
-                <img src="assets/icon-2.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Coffee Art<br>Gallery</h2>
-                    <p class="offer--about">
-                        Immerse yourself in the artistry of coffee with our stunning coffee art gallery, where creativity meets flavor
-                    </p>
+            <div class="offer-grid--item4" style="background-image: url(assets/offerings-2.jpg); background-repeat: no-repeat; background-size: cover; height: 400px;"></div>
+        </div>
+        <div class="offer--grid-1">
+            <div class="offer-grid--item5" style="background-image: url(assets/offerings-3.jpg); background-repeat: no-repeat; background-size: cover; background-position: center; height: 400px;"></div> 
+            <div class="offer-grid--item6">
+                <div class="offer--headings">
+                    <h1 class="offer-main--heading">Read</h1>
+                    <h2 class="offer-sub--heading">Books</h2>
                 </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
-            </div>
-            <div class="offer-7">
-                <img src="assets/icon-2.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Taste Before<br>You Eat</h2>
-                    <p class="offer--about">
-                        Experience flavors first—sample our delights before indulging fully.
-                    </p>
-                </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
-            </div>
-            <div class="offer-8">
-                <img src="assets/icon-2.png" alt="" class="offer-img">
-                <div class="offer--description">
-                    <h2 class="offer--name" style="text-align: center;">Make Your Party</h2>
-                    <p class="offer--about">
-                        Host unforgettable celebrations with our customized party arrangements.
-                    </p>
-                </div>
-                <button class="more-offer--btn">
-                    View More
-                </button>
+                <p class="offer--detail"
+                style="color: white;
+                font-family: 'plus jakarta sans', sans-serif;
+                width: 75%;
+                font-size: clamp(7px, calc(4px + 0.7vw), 50px);
+                margin-bottom: 30px;
+                line-height: clamp(15px, 2vw, 50px);
+                font-weight: 300;
+                letter-spacing: 1.5px;">
+                    Cozy up with a cup of coffee and explore our curated collection of books for the perfect reading escape!
+                </p>
             </div>
         </div>
+        <div class="offer--grid-2">  
+            <div class="offer-grid--item7">
+                <div class="offer--headings">
+                    <h1 class="offer-main--heading">Coffee</h1>
+                    <h2 class="offer-sub--heading">ART GALLERY</h2>
+                </div>
+                <p class="offer--detail"
+                style="color: white;
+                font-family: 'plus jakarta sans', sans-serif;
+                width: 75%;
+                font-size: clamp(7px, calc(4px + 0.7vw), 50px);
+                margin-bottom: 30px;
+                line-height: clamp(15px, 2vw, 50px);
+                font-weight: 300;
+                letter-spacing: 1.5px;">
+                    Immerse yourself in the artistry of coffee with our stunning coffee art gallery, where creativity meets flavor.
+                </p>
+            </div>
+            <div class="offer-grid--item8" style="background-image: url(assets/offerings-4.jpg); background-repeat: no-repeat; background-size: cover; height: 400px; background-position: center;"></div>
+        </div>
+        <div class="offer--grid-1">
+            <div class="offer-grid--item9" style="background-image: url(assets/offerings-5.jpg); background-repeat: no-repeat; background-size: cover; height: 400px; background-position: bottom;"></div> 
+            <div class="offer-grid--item10">
+                <div class="offer--headings">
+                    <h1 class="offer-main--heading">Customized</h1>
+                    <h2 class="offer-sub--heading">CUPS</h2>
+                </div>
+                <p class="offer--detail"
+                style="    color: white;
+                font-family: 'plus jakarta sans', sans-serif;
+                width: 75%;
+                font-size: clamp(7px, calc(4px + 0.7vw), 50px);
+                margin-bottom: 30px;
+                line-height: clamp(15px, 2vw, 50px);
+                font-weight: 300;
+                letter-spacing: 1.5px;">
+                    Personalize your coffee experience with custom-designed cups, crafted just for you!
+                </p>
+            </div>
+        </div>
+        <div class="offer--grid-2">  
+            <div class="offer-grid--item11">
+                <div class="offer--headings">
+                    <h1 class="offer-main--heading">MOOD</h1>
+                    <h2 class="offer-sub--heading">BASED COFFEE<br>SUGGESTIONS</h2>
+                </div>
+                <p class="offer--detail"
+                style="color: white;
+                font-family: 'plus jakarta sans', sans-serif;
+                width: 75%;
+                font-size: clamp(7px, calc(4px + 0.7vw), 50px);
+                margin-bottom: 30px;
+                line-height: clamp(15px, 2vw, 50px);
+                font-weight: 300;
+                letter-spacing: 1.5px;">
+                    Personalized coffee suggestions tailored to match your mood—experience the perfect brew for every feeling!
+                </p>
+            </div>
+            <div class="offer-grid--item12" style="background-image: url(assets/offerings-6.jpg); background-repeat: no-repeat; background-size: cover; height: 400px; background-position: center;"></div>
+        </div>
+    </div>
+    <div class="menu-img">
+        <div class="menu-headings">
+            <h1 class="menu-main--heading">Choose</h1>
+            <h2 class="menu-sub--heading"> WHAT YOU WANT</h2>
+        </div>
+    </div>
+    <div class="menu-list-1">
+
+    </div>
+    <div class="menu-list-2">
+
     </div>
     <div class="content">
         <h1>Sample Website</h1>
