few size changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Oswald:wght@200..700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src="script.js" defer></script>
-    <title>Baresto</title>
+    <title>Brew Topia</title>
 </head>
 <body>
     <div class="background-image">
@@ -87,12 +87,9 @@
         </div>
         <div class="origin-grid--item2"></div>
     </div>
-    <div class="offer-headings">
-        <h1 class="offer-main--heading">What We Offer</h1>
-    </div>
     <div class="offers">
         <div class="offer--grid-1">
-            <div class="offer-grid--item1" style="background-image: url(assets/offerings-1.jpg); background-position: unset; background-repeat: no-repeat; background-size: cover; height: 400px;"></div>
+            <div class="offer-grid--item1" style="background-image: url(assets/offerings-1.jpg); background-position: unset; background-repeat: no-repeat; background-size: cover;"></div>
             <div class="offer-grid--item2">
                 <div class="offer--headings">
                     <h1 class="offer-main--heading">Aromatic</h1>
@@ -129,10 +126,10 @@
                     In the heart of the bustling metropolis, where the rhythm of life pulses relentlessly, there exists a sanctuary hidden among the chaos—a place where time slows, and worries fade into the aroma of freshly ground coffee beans.
                 </p>
             </div>
-            <div class="offer-grid--item4" style="background-image: url(assets/offerings-2.jpg); background-repeat: no-repeat; background-size: cover; height: 400px;"></div>
+            <div class="offer-grid--item4" style="background-image: url(assets/offerings-2.jpg); background-repeat: no-repeat; background-size: cover;"></div>
         </div>
         <div class="offer--grid-1">
-            <div class="offer-grid--item5" style="background-image: url(assets/offerings-3.jpg); background-repeat: no-repeat; background-size: cover; background-position: center; height: 400px;"></div> 
+            <div class="offer-grid--item5" style="background-image: url(assets/offerings-3.jpg); background-repeat: no-repeat; background-size: cover; background-position: center;"></div> 
             <div class="offer-grid--item6">
                 <div class="offer--headings">
                     <h1 class="offer-main--heading">Read</h1>
@@ -169,10 +166,10 @@
                     Immerse yourself in the artistry of coffee with our stunning coffee art gallery, where creativity meets flavor.
                 </p>
             </div>
-            <div class="offer-grid--item8" style="background-image: url(assets/offerings-4.jpg); background-repeat: no-repeat; background-size: cover; height: 400px; background-position: center;"></div>
+            <div class="offer-grid--item8" style="background-image: url(assets/offerings-4.jpg); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
         </div>
         <div class="offer--grid-1">
-            <div class="offer-grid--item9" style="background-image: url(assets/offerings-5.jpg); background-repeat: no-repeat; background-size: cover; height: 400px; background-position: bottom;"></div> 
+            <div class="offer-grid--item9" style="background-image: url(assets/offerings-5.jpg); background-repeat: no-repeat; background-size: cover;background-position: bottom;"></div> 
             <div class="offer-grid--item10">
                 <div class="offer--headings">
                     <h1 class="offer-main--heading">Customized</h1>
@@ -209,7 +206,7 @@
                     Personalized coffee suggestions tailored to match your mood—experience the perfect brew for every feeling!
                 </p>
             </div>
-            <div class="offer-grid--item12" style="background-image: url(assets/offerings-6.jpg); background-repeat: no-repeat; background-size: cover; height: 400px; background-position: center;"></div>
+            <div class="offer-grid--item12" style="background-image: url(assets/offerings-6.jpg); background-repeat: no-repeat; background-size: cover;background-position: center;"></div>
         </div>
     </div>
     <div class="menu-img">
