--- a/index.html
+++ b/index.html
@@ -216,10 +216,134 @@
         </div>
     </div>
     <div class="menu-list-1">
-
+        <div class="menu-coffee">
+            <div class="menu-espresso" style="font-size: 38px; font-family: 'Dancing script'; color: #21A7B2;">espresso</div>
+            <div class="coffee-sizes">
+                <div class="medium-coffee" style="font-family: 'oswald', sans-serif;">Medium<br><span style="font-size: 16px; color: #21A7B2; ">16oz</span></div>
+                <div class="large-coffee" style="font-family: 'oswald', sans-serif;">Large<br><span style="font-size: 16px; color: #21A7B2;">20oz</span></div>
+            </div>
+        </div>
+        <div class="menu-item1">
+            <div class="coffee-name">
+                Espresso<br>
+                <span>Espresso, where passion meets perfection.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item2">
+            <div class="coffee-name">
+                Mocchiato<br>
+                <span>The perfect harmony of espresso and sweetness</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item3">
+            <div class="coffee-name">
+                Classic Cappucino<br>
+                <span>A timeless delight brewed just for you.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item4">
+            <div class="coffee-name">
+                Cappucino<br>
+                <span>Where rich espresso meets frothy perfection.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item5">
+            <div class="coffee-name">
+                Mocha Latte<br>
+                <span>The perfect blend of chocolate and espresso.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item6">
+            <div class="coffee-name">
+                Caramel Latte<br>
+                <span>Where smooth espresso meets golden caramel bliss.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item7">
+            <div class="coffee-name">
+                Cafe Americano<br>
+                <span>The essence of pure coffee bliss.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
     </div>
     <div class="menu-list-2">
-
+        <div class="menu-coffee">
+            <div class="menu-espresso" style="font-size: 38px; font-family: 'Dancing script'; color: #21A7B2;">espresso</div>
+            <div class="coffee-sizes">
+                <div class="medium-coffee" style="font-family: 'oswald', sans-serif;">Medium<br><span style="font-size: 16px; color: #21A7B2; ">16oz</span></div>
+                <div class="large-coffee" style="font-family: 'oswald', sans-serif;">Large<br><span style="font-size: 16px; color: #21A7B2;">20oz</span></div>
+            </div>
+        </div>
+        <div class="menu-item1">
+            <div class="coffee-name">
+                Espresso<br>
+                <span>Espresso, where passion meets perfection.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item2">
+            <div class="coffee-name">
+                Mocchiato<br>
+                <span>The perfect harmony of espresso and sweetness</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item3">
+            <div class="coffee-name">
+                Classic Cappucino<br>
+                <span>A timeless delight brewed just for you.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item4">
+            <div class="coffee-name">
+                Cappucino<br>
+                <span>Where rich espresso meets frothy perfection.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item5">
+            <div class="coffee-name">
+                Mocha Latte<br>
+                <span>The perfect blend of chocolate and espresso.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item6">
+            <div class="coffee-name">
+                Caramel Latte<br>
+                <span>Where smooth espresso meets golden caramel bliss.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
+        <div class="menu-item7">
+            <div class="coffee-name">
+                Cafe Americano<br>
+                <span>The essence of pure coffee bliss.</span>
+            </div>
+            <div class="medium-price">1.75</div>
+            <div class="large-price">2.20</div>
+        </div>
     </div>
     <div class="content">
         <h1>Sample Website</h1>
